--- a/locale/ResubmissionContrib/de.po
+++ b/locale/ResubmissionContrib/de.po
@@ -25,3 +25,6 @@ msgstr "%1 Wiedervorlage: Seiten auf Aktualität prüfen"
 
 msgid "The following pages should be examined in the web of %1 for up-to-dateness"
 msgstr "Folgende Seiten sollten im Bereich %1 auf Aktualität geprüft werden"
+
+msgid "Since"
+msgstr "Seit"
