Add topic title to Resubmission page.
id: 1116
Ticket: none
Release-Note: none

--- a/locale/ResubmissionContrib/de.po
+++ b/locale/ResubmissionContrib/de.po
@@ -28,3 +28,6 @@ msgstr "Folgende Seiten sollten im Bereich %1 auf Aktualität geprüft werden"
 
 msgid "Since"
 msgstr "Seit"
+
+msgid "Resubmission"
+msgstr "Aktualitätsprüfung"
