ID:6499 Add "In resubmission since" column

--- a/locale/ResubmissionContrib/de.po
+++ b/locale/ResubmissionContrib/de.po
@@ -31,3 +31,9 @@ msgstr "Seit"
 
 msgid "Resubmission"
 msgstr "Aktualitätsprüfung"
+
+msgid "In state since"
+msgstr "Status seit"
+
+msgid "In resubmission since"
+msgstr "In Wiedervorlage seit"
