ID:8900 Changed Responsible. Added Infopage if.

--- a/locale/ResubmissionContrib/de.po
+++ b/locale/ResubmissionContrib/de.po
@@ -30,10 +30,13 @@ msgid "Support the responsible users with the care of their content. Use the pag
 msgstr "Unterstützen Sie die Seitenverantwortlichen bei der Pflege der Inhalte. Kontrollieren sie die Umsetzung auf der Seite Aktualitätsprüfung."
 
 msgid "Please check the status of the page(s) above. Confirm the up-to-dateness of approved pages by approving them again (start discussion & ask for approval & approve the content). If you do not need the content anymore please delete it or ask your local Q.wiki Key User to do so."
-msgstr "Bitte prüfen Sie den Status der obigen Seite(n). Bestätigen Sie die Aktualität von freigegeben Seiten, indem Sie diese erneut freigeben (Diskussion starten & um Freigabe bitten & inhaltlich freigeben). Sollten Inhalte, egal welchen Status, nicht mehr bentigt werden, lschen Sie diese oder veranlassen Sie die Lschung durch Ihren Q.wiki Key User."
+msgstr "Bitte prüfen Sie den Status der obigen Seite(n). Bestätigen Sie die Aktualität von freigegeben Seiten, indem Sie diese erneut freigeben (Diskussion starten & um Freigabe bitten & inhaltlich freigeben). Sollten Inhalte, egal welchen Status, nicht mehr benötigt werden, löschen Sie diese oder veranlassen Sie die Löschung durch Ihren Q.wiki Key User."
 
 msgid "Since"
 msgstr "Seit"
+
+msgid Responsible
+msgstr Verantwortlicher
 
 msgid "Resubmission"
 msgstr "Aktualitätsprüfung"
@@ -45,7 +48,7 @@ msgid "In resubmission since"
 msgstr "In Wiedervorlage seit"
 
 msgid "Approved pages:"
-msgstr "Freigegeben Seiten:"
+msgstr "Freigegebene Seiten:"
 
 msgid "Discussions:"
 msgstr "Diskussionen:"
